# IPManageSystem

./: .gitignore  README.md
Doc/: requirements_v21.md  test_report_ticket9.md  tickets_v21.md
client/: Cargo.toml  config.toml.template
client/src/: config.rs  error.rs  main.rs
client/src/api/: client.rs  mod.rs
client/src/network/: detector.rs  mod.rs
client/src/wmi/: collector.rs  mod.rs
docs/: DIAGRAM_README.md  annotated_client_main.rs  annotated_server_main.rs  architecture_diagram.puml  client_setup.md  component_diagram.puml  er_diagram.puml  init.sql  integration_test_report.md  operation_manual.md  sequence_diagram.puml  server_component_diagram.puml  server_setup.md  troubleshooting.md
releases/client/: README.md  SERVICE_SETUP.md  config.toml.template  download_nssm.bat  install_service.bat  restart_service.bat  start_client.bat  start_service.bat  status_service.bat  stop_service.bat  uninstall_service.bat
releases/server/: README.md  start_server.bat
server/: Cargo.toml  config.toml.template  test_api.bat  test_api.sh
server/src/: config.rs  error.rs  main.rs
server/src/db/: repository.rs
server/src/handlers/: mod.rs  pc_info.rs
server/src/models/: pc_info.rs
